# pongESP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/audio/: CMakeLists.txt  audio.cpp
components/audio/include/: audio.hpp
components/ball/: CMakeLists.txt  ball.cpp
components/ball/include/: ball.hpp
components/blocks/: CMakeLists.txt  blocks.cpp
components/blocks/include/: blocks.hpp
components/constants/include/: constants.hpp
components/display/: CMakeLists.txt  display.cpp
components/display/include/: display.hpp
components/game_object/: CMakeLists.txt  game_object.cpp
components/game_object/include/: game_object.hpp
components/paddle/: CMakeLists.txt  paddle.cpp
components/paddle/include/: paddle.hpp
components/screen/: CMakeLists.txt  screen.cpp
components/screen/include/: screen.hpp
components/touch/: CMakeLists.txt  touch.cpp
components/touch/include/: touch.hpp
main/: CMakeLists.txt  game.cpp  game_over.cpp  game_state.cpp  helpers.cpp  idf_component.yml  main.cpp  menu.cpp
main/include/: game.hpp  game_over.hpp  game_state.hpp  helpers.hpp  menu.hpp  settings.hpp
main/screens/: game.cpp  menu.cpp  settings.cpp
